stryker/Metadata/unpackaged/objects/faculty__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F_id__c</fullName>
        <displayFormat>F_id-{000}</displayFormat>
        <label>F_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <displayFormat>f-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>F_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <label>Phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>classes__c</fullName>
        <label>classes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>salesforce</fullName>
                </value>
                <value>
                    <fullName>java</fullName>
                </value>
                <value>
                    <fullName>dotnet</fullName>
                </value>
                <value>
                    <fullName>hadop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-id-{000}</displayFormat>
        <label>faculty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facultys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>